Bug 106371 - [CI] igt@drv_suspend@debugfs-reader - dmesg-warn - *ERROR* dpcd read (1 bytes at 1536) failed (-5)
Summary: [CI] igt@drv_suspend@debugfs-reader - dmesg-warn - *ERROR* dpcd read (1 bytes...
Status: CLOSED FIXED
Alias: None
Product: DRI
Classification: Unclassified
Component: DRM/Intel (show other bugs)
Version: XOrg git
Hardware: Other All
: medium normal
Assignee: Intel GFX Bugs mailing list
QA Contact: Intel GFX Bugs mailing list
URL:
Whiteboard: ReadyForDev
Keywords:
Depends on:
Blocks:
 
Reported: 2018-05-03 11:53 UTC by Martin Peres
Modified: 2018-11-13 16:34 UTC (History)
1 user (show)

See Also:
i915 platform: CFL, CNL, KBL, SKL
i915 features: power/suspend-resume


Attachments

Comment 1 Martin Peres 2018-06-19 22:40:02 UTC
Still very much happening! Every run between 34 and 39, then again in 48. Let's wait a little longer to see if this is really fixed or just a fluke that it has been working for so long!
Comment 2 Martin Peres 2018-06-19 22:40:18 UTC
Oops, sorry for the noise. Setting back to reopened!
Comment 3 Chris Wilson 2018-09-06 19:38:22 UTC
commit 7a72c78bdd0a1ea1d879610542679cc680398220
Author: Rodrigo Vivi <rodrigo.vivi@intel.com>
Date:   Thu Jul 19 17:31:55 2018 -0700

    drm/i915: Fix psr sink status report.
    
    First of all don't try to read dpcd if PSR is not even supported.
    
    But also, if read failed return -EIO instead of reporting via a
    backchannel.
    
    v2: fix dev_priv: At this level m->private is the connector. (CI/DK)
        don't convert dpcd read errors to EIO. (DK)
    
    Fixes: 5b7b30864d1d ("drm/i915/psr: Split sink status into a separate debugfs node")
    Cc: Chris Wilson <chris@chris-wilson.co.uk>
    Cc: Dhinakaran Pandiyan <dhinakaran.pandiyan@intel.com>
    Cc: José Roberto de Souza <jose.souza@intel.com>
    Signed-off-by: Rodrigo Vivi <rodrigo.vivi@intel.com>
    Reviewed-by: Dhinakaran Pandiyan <dhinakaran.pandiyan@intel.com>
    Link: https://patchwork.freedesktop.org/patch/msgid/20180720003155.16290-1-rodrigo.vivi@intel.com
Comment 4 Martin Peres 2018-10-09 14:36:45 UTC
Still a problem:

https://intel-gfx-ci.01.org/tree/drm-tip/drmtip_121/fi-skl-6600u/igt@drv_suspend@debugfs-reader.html

https://intel-gfx-ci.01.org/tree/drm-tip/drmtip_121/fi-kbl-7560u/igt@drv_suspend@debugfs-reader.html

https://intel-gfx-ci.01.org/tree/drm-tip/drmtip_121/fi-kbl-r/igt@drv_suspend@debugfs-reader.html

https://intel-gfx-ci.01.org/tree/drm-tip/drmtip_121/fi-cfl-s3/igt@drv_suspend@debugfs-reader.html

<3> [175.998699] [drm:i915_dpcd_show [i915]] *ERROR* dpcd read (1 bytes at 1536) failed (-5)
<3> [176.076850] [drm:i915_dpcd_show [i915]] *ERROR* dpcd read (1 bytes at 1536) failed (-5)
<3> [176.155098] [drm:i915_dpcd_show [i915]] *ERROR* dpcd read (1 bytes at 1536) failed (-5)
<3> [176.224211] [drm:i915_dpcd_show [i915]] *ERROR* dpcd read (1 bytes at 1536) failed (-5)
<3> [176.297647] [drm:i915_dpcd_show [i915]] *ERROR* dpcd read (1 bytes at 1536) failed (-5)
<3> [176.373245] [drm:i915_dpcd_show [i915]] *ERROR* dpcd read (1 bytes at 1536) failed (-5)
<3> [176.423446] [drm:i915_dpcd_show [i915]] *ERROR* dpcd read (1 bytes at 1536) failed (-5)
<3> [176.500852] [drm:i915_dpcd_show [i915]] *ERROR* dpcd read (1 bytes at 1536) failed (-5)
<3> [176.575584] [drm:i915_dpcd_show [i915]] *ERROR* dpcd read (1 bytes at 1536) failed (-5)
<3> [176.653796] [drm:i915_dpcd_show [i915]] *ERROR* dpcd read (1 bytes at 1536) failed (-5)
<3> [176.730089] [drm:i915_dpcd_show [i915]] *ERROR* dpcd read (1 bytes at 1536) failed (-5)
<3> [176.779518] [drm:i915_dpcd_show [i915]] *ERROR* dpcd read (1 bytes at 1536) failed (-5)
<3> [176.857346] [drm:i915_dpcd_show [i915]] *ERROR* dpcd read (1 bytes at 1536) failed (-5)
Comment 5 Chris Wilson 2018-10-10 10:14:32 UTC
commit 65404c89e9539e7e569be8c790dd9e4b131149f4 (HEAD -> drm-intel-next-queued, drm-intel/drm-intel-next-queued)
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Wed Oct 10 09:17:06 2018 +0100

    drm/i915: Show the DPCD read error inline
    
    When reporting the DPCD dump through debugfs, show the errors inline
    where appropriate. If a read at one particular offset fails, report it.
    
    Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=106371
    Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>
    Reviewed-by: Jani Nikula <jani.nikula@intel.com>
    Link: https://patchwork.freedesktop.org/patch/msgid/20181010081706.29931-1-chris@chris-wilson.co.uk
Comment 6 Lakshmi 2018-10-23 13:07:47 UTC
Update: Last seen this issue drmtip_124 (1 week, 6 days / 157 runs ago).
Comment 7 Martin Peres 2018-11-13 16:27:15 UTC
(In reply to Lakshmi from comment #6)
> Update: Last seen this issue drmtip_124 (1 week, 6 days / 157 runs ago).

I disagree with the idea that we have sufficient data to close this bug.
 It has been intermittent for all this time, 15 runs of drmtip are not sufficient to close it yet...
Comment 8 Chris Wilson 2018-11-13 16:30:13 UTC
The error message has definitely been removed from the code.

~/dim/linux $ git grep "dcpd read"
=1
Comment 9 Martin Peres 2018-11-13 16:34:16 UTC
(In reply to Chris Wilson from comment #8)
> The error message has definitely been removed from the code.
> 
> ~/dim/linux $ git grep "dcpd read"
> =1

Sorry, I missed your message above! Thanks!


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.